# super-auto-sim

./: Cargo.toml
src/: battle.rs  dice.rs  food.rs  friend.rs  main.rs  modifier.rs  params.rs  rng.rs  shop.rs  species.rs  team.rs  util.rs
